--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,66 @@
 .App {
-  text-align: center;
+  background: url('bg.jpg') repeat;
+  height: calc(100vh - 100px);
+  padding: 50px 100px;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vh;
 }
 
-.App-header {
-  background-color: #F0F4F4;
-  min-height: 100vh;
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #192526;
+  text-align: center;
+  padding: 50px 0;
+}
+
+#hello-graphic {
+  height: 30vh;
+  width: 60vmin
+}
+
+main p {
+  width: 50%;
+  padding-top: 30px;
+}
+
+.flex-list {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  width: 50%;
+  font-size: 2em;
+}
+
+.flex-list li a {
+  color: #1F8DA6;
+  transition: .3s ease-in-out all;
+}
+
+.flex-list li a:hover {
+  color: #135564;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .App {
+    padding: 50px;
+  }
+  
+  .flex-list, main p {
+    width: 100%;
+  }
 }
