--- a/src/App.css
+++ b/src/App.css
@@ -26,22 +26,39 @@ main p {
   padding-top: 30px;
 }
 
-.flex-list {
+.social-list-container {
+  position: fixed;
+  bottom: 0px;
+  left: 100px;
+}
+
+.social-list {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   list-style: none;
   padding: 0;
-  width: 50%;
-  font-size: 2em;
+  font-size: 1.8em;
+  margin: 0;
+  height: 50vh;
 }
 
-.flex-list li a {
+.social-list li a {
   color: #1F8DA6;
   transition: .3s ease-in-out all;
 }
 
-.flex-list li a:hover {
+.social-list li a:hover {
   color: #135564;
+}
+
+.social-list:after {
+  content: "";
+  display: block;
+  width: 2px;
+  height: 90px;
+  background-color: #1F8DA6;
+  margin: 0px auto;
 }
 
 .sr-only {
@@ -59,8 +76,25 @@ main p {
   .App {
     padding: 50px;
   }
+
+  .social-list-container {
+    position: unset;
+    height: unset;
+    width: 80%;
+    padding-top: 30px;
+  }
+
+  .social-list {
+    flex-direction: row;
+    flex-direction: space-between;
+    height: unset;
+  }
+
+  .social-list:after {
+    display: none;
+  }
   
-  .flex-list, main p {
+  main p {
     width: 100%;
   }
 }
