--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 .App {
-  background: url('bg.jpg') repeat;
+  background: url('../images/bg.jpg') repeat;
   height: calc(100vh - 100px);
   padding: 50px 100px;
 }
