--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,18 +12,32 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
-  padding: 50px 0;
+  padding: 50px 0 50px 100px;
+}
+
+section {
+  padding-top: 30px;
+}
+
+h2 {
+  text-transform: lowercase;
+  font-weight: 100;
+}
+
+a {
+  color: #267F93;
+  font-weight: 700;
+  text-decoration: none;
+  transition: .3s ease-in-out all;
+}
+
+a:hover {
+  color: #135564;
 }
 
 #hello-graphic {
   height: 30vh;
   width: 60vmin
-}
-
-main p {
-  width: 50%;
-  padding-top: 30px;
 }
 
 .social-list-container {
@@ -41,15 +55,7 @@ main p {
   font-size: 1.8em;
   margin: 0;
   height: 50vh;
-}
-
-.social-list li a {
-  color: #1F8DA6;
-  transition: .3s ease-in-out all;
-}
-
-.social-list li a:hover {
-  color: #135564;
+  text-align: center;
 }
 
 .social-list:after {
