--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,106 +1,103 @@
+@import "./variables";
+
 .App {
   background: url('../images/bg.jpg') repeat;
   height: calc(100vh - 100px);
   padding: 50px 100px;
-}
+  background-color: $lilywhite;
 
-.App-logo {
-  height: 10vh;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px 0 50px 100px;
-}
-
-section {
-  padding-top: 30px;
-}
-
-h2 {
-  text-transform: lowercase;
-  font-weight: 100;
-}
-
-a {
-  color: #267F93;
-  font-weight: 700;
-  text-decoration: none;
-  transition: .3s ease-in-out all;
-}
-
-a:hover {
-  color: #135564;
-}
-
-#hello-graphic {
-  height: 30vh;
-  width: 60vmin
-}
-
-.social-list-container {
-  position: fixed;
-  bottom: 0px;
-  left: 100px;
-}
-
-.social-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  list-style: none;
-  padding: 0;
-  font-size: 1.8em;
-  margin: 0;
-  height: 50vh;
-  text-align: center;
-}
-
-.social-list:after {
-  content: "";
-  display: block;
-  width: 2px;
-  height: 90px;
-  background-color: #1F8DA6;
-  margin: 0px auto;
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0,0,0,0);
-  border: 0;
-}
-
-@media only screen and (max-width: 600px) {
-  .App {
+  @media only screen and (max-width: 600px) {
     padding: 50px;
   }
 
-  .social-list-container {
-    position: unset;
-    height: unset;
-    width: 80%;
-    padding-top: 30px;
+  .App-logo {
+    height: 10vh;
   }
 
-  .social-list {
-    flex-direction: row;
-    flex-direction: space-between;
-    height: unset;
-  }
-
-  .social-list:after {
-    display: none;
+  h2 {
+    text-transform: lowercase;
+    font-weight: 100;
   }
   
-  main p {
-    width: 100%;
+  a {
+    color: $fountain;
+    font-weight: 700;
+    text-decoration: none;
+    transition: .3s ease-in-out all;
+  
+    &:hover {
+      color: darken( $fountain, 20% );
+    }
+  }
+  
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0 50px 100px;
+  
+    section {
+      padding-top: 30px;
+    }
+  }
+  
+  #hello-graphic {
+    height: 30vh;
+    width: 60vmin
+  }
+  
+  .social-list-container {
+    position: fixed;
+    bottom: 0px;
+    left: 100px;
+  
+    @media only screen and (max-width: 600px) {
+      position: unset;
+      height: unset;
+      width: 80%;
+      padding-top: 30px;
+    }
+  
+    .social-list {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      list-style: none;
+      padding: 0;
+      font-size: 1.8em;
+      margin: 0;
+      height: 50vh;
+      text-align: center;
+  
+      @media only screen and (max-width: 600px) {
+        flex-direction: row;
+        flex-direction: space-between;
+        height: unset;
+      }
+  
+      &:after {
+        content: "";
+        display: block;
+        width: 2px;
+        height: 90px;
+        background-color: #1F8DA6;
+        margin: 0px auto;
+  
+        @media only screen and (max-width: 600px) {
+          display: none;
+        }
+      }
+    }
+  }
+  
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
   }
 }
