--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
+@font-face {
+  font-family: 'ChaiteaExtraBold';
+  src: local('Chaitea-ExtraBold'), url(./fonts/Chaitea-ExtraBold.ttf) format('truetype');
+}
+
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
