--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -1,7 +1,7 @@
 /* Primary Colors */
 $firewatch: #F2836B;
 $lilywhite: #F0F4F4;
-$fountain: #267F93;
+$fountain: #1E7082;
 $blackpearl: #192526;
 
 /* Secondary Colors */
