--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,170 +1,125 @@
 @import "./variables";
 
 .App {
-  background: url('../images/bg.jpg') repeat;
-  height: calc(100vh - 100px);
-  padding: 50px 0 50px 100px;
-  background-color: $lilywhite;
-
-  @media only screen and (max-width: 600px) {
-    padding: 50px;
-  }
-
-  .logo {
-    height: 10vh;
-  }
-
+  
   h1 {
-    font-family: 'ChaiteaExtraBold';
-
-    &#intro-heading {
-      font-size: 12em;
-      letter-spacing: 5px;
-      margin: 0;
-      padding: 0;
-    }
+    font-family: p22-underground, sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    text-transform: lowercase;
+    font-size: 3.5em;
   }
 
   h2 {
+    font-family: p22-underground, sans-serif;
+    font-weight: 900;
+    font-style: normal;
     text-transform: lowercase;
-    font-weight: 100;
+    font-size: 1.8em;
   }
   
   a {
-    color: $fountain;
-    font-weight: 700;
+    font-family: p22-underground, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    color: $blackpearl;
     text-decoration: none;
     transition: all .3s ease-in-out;
   
     &:hover {
-      color: darken( $fountain, 20% );
+      color: darken( $blackpearl, 20% );
     }
+  }
 
-    &.learn-more {
-      text-transform: lowercase;
-      letter-spacing: 1px;
+  p {
+    font-family: p22-underground, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1em;
+  }
 
-      &:hover {
-        .learn-more-arrow {
-          transform: translateX(10px);
-        }
-      }
-
-      .learn-more-arrow {
-        position: relative;
-        top: 3px;
-        font-size: 1.25em;
-        transition: transform .3s ease-in-out;
-      }
-    }
+  .btn {
+    background-color: $blackpearl;
+    color: $lilywhite;
+    text-transform: uppercase;
+    padding: 12px 25px 10px 25px;
   }
 
   header {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+    .social-list-container {
+      background-color: $blackpearl;
+      width: calc(100% - 60px);
+      height: 30px;
+      padding: 5px 30px;
+      display: flex;
+      justify-content: flex-end;;
 
-    nav {
-      ul {
-        list-style: none;
+      .social-list {
         display: flex;
         justify-content: space-between;
-        width: 500px;
+        align-items: center;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: 15%;
 
-        @media only screen and (max-width: 775px) {
-          display: none;
-        }
-
-        &:after {
-          content: "";
-          display: block;
-          width: 90px;
-          height: 2px;
-          background-color: $fountain;
-          margin-top: 12px;
-        }
-      }
-    }
-  }
+        a {
+          color: $lilywhite;
+          font-size: 16px;
+          &:hover {
+            .social-icon {
+              transform: translateY(3px);
+            }
+          }
   
-  main {
-    display: flex;
-    flex-direction: column;
-    padding: 50px 0 50px 100px;
-
-    @media only screen and (max-width: 600px) {
-      padding: 50px 0;
-    }
-  
-    section {
-      padding-top: 30px;
-    }
-
-    p {
-      &#intro-p {
-        font-size: 1.5em;
-        margin: 10px 0;
-      }
-    }
-  }
-  
-  #hello-graphic {
-    height: 30vh;
-    width: 60vmin
-  }
-  
-  .social-list-container {
-    position: fixed;
-    bottom: 0px;
-    left: 100px;
-  
-    @media only screen and (max-width: 600px) {
-      position: unset;
-      height: unset;
-      width: 80%;
-      padding-top: 30px;
-    }
-  
-    .social-list {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      list-style: none;
-      padding: 0;
-      font-size: 1.8em;
-      margin: 0;
-      height: 50vh;
-      text-align: center;
-  
-      @media only screen and (max-width: 600px) {
-        flex-direction: row;
-        flex-direction: space-between;
-        height: unset;
-      }
-  
-      &:after {
-        content: "";
-        display: block;
-        width: 2px;
-        height: 90px;
-        background-color: $fountain;
-        margin: 0px auto;
-  
-        @media only screen and (max-width: 600px) {
-          display: none;
-        }
-      }
-
-      a {
-        &:hover {
           .social-icon {
-            transform: translateX(3px);
+            transition: transform .3s ease-in-out;
           }
         }
+      }
+    }
 
-        .social-icon {
-          transition: transform .3s ease-in-out;
+    #main-nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0px 4px 20px rgba(0,0,0,.1);
+      padding: 15px 30px;
+
+      .logo {
+        width: 100px;
+      }
+
+      nav {
+        ul {
+          list-style: none;
+          display: flex;
+          justify-content: space-between;
+          width: 400px;
+  
+          a {
+            text-transform: uppercase;
+          }
+  
+          @media only screen and (max-width: 775px) {
+            display: none;
+          }
         }
+      }
+    }
+  }
+
+  main {
+    margin: 30px;
+
+    #speaking,
+    #buzzwords,
+    #projects,
+    #community {
+
+      ul {
+        list-style: none;
+        padding-left: 0;
       }
     }
   }
