--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: p22-underground, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
+  margin: 0;
 }
