--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,6 +16,7 @@
     font-style: normal;
     text-transform: lowercase;
     font-size: 1.8em;
+    margin: 0;
   }
   
   a {
@@ -27,32 +28,39 @@
     transition: all .3s ease-in-out;
   
     &:hover {
-      color: darken( $blackpearl, 20% );
+      color: darken( $blackpearl, 100% );
     }
-  }
-
-  p {
-    font-family: p22-underground, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1em;
   }
 
   .btn {
     background-color: $blackpearl;
-    color: $lilywhite;
+    color: #fff;
     text-transform: uppercase;
     padding: 12px 25px 10px 25px;
+
+    &:hover {
+      color: darken( $lilywhite, 10% );
+    }
+  }
+
+  .highlight {
+    background: linear-gradient(180deg, rgba(255,255,255,0) 65%, $lilywhite 65%);
   }
 
   header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+
     .social-list-container {
       background-color: $blackpearl;
       width: calc(100% - 60px);
       height: 30px;
       padding: 5px 30px;
       display: flex;
-      justify-content: flex-end;;
+      justify-content: flex-end;
 
       .social-list {
         display: flex;
@@ -64,7 +72,7 @@
         width: 15%;
 
         a {
-          color: $lilywhite;
+          color: #fff;
           font-size: 16px;
           &:hover {
             .social-icon {
@@ -83,6 +91,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background-color: #fff;;
       box-shadow: 0px 4px 20px rgba(0,0,0,.1);
       padding: 15px 30px;
 
@@ -110,7 +119,38 @@
   }
 
   main {
-    margin: 30px;
+    margin: 175px 50px 50px 50px;
+
+    .jumbotron {
+      background-image: url('https://images.unsplash.com/photo-1542435503-956c469947f6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1334&q=80');
+      background-size: cover;
+      height: 67vh;
+      margin-bottom: 35px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255,255,255,.8);
+        z-index: 1;
+      }
+
+      & > * {
+        z-index: 100;
+      }
+    }
+
+    section {
+      padding: 20px 0;
+    }
 
     #speaking,
     #buzzwords,
@@ -120,7 +160,131 @@
       ul {
         list-style: none;
         padding-left: 0;
+
+        li {
+          padding: 5px 0;
+        }
       }
+    }
+
+    #projects {
+      
+      article {
+
+        ul {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+
+          li {
+            width: 30%;
+            height: 350px;
+
+            div {
+              height: 100%;
+              width: 100%;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+
+              &#project-one {
+                background-image: url('https://images.unsplash.com/photo-1453928582365-b6ad33cbcf64?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1652&q=80');
+                background-size: cover;
+              }
+    
+              &#project-two {
+                background-image: url('https://images.unsplash.com/photo-1471897488648-5eae4ac6686b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80');
+                background-size: cover;
+              }
+    
+              &#project-three {
+                background-image: url('https://images.unsplash.com/photo-1504198070170-4ca53bb1c1fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80');
+                background-size: cover;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    #buzzwords {
+      & > ul {
+        flex-wrap: wrap;
+      }
+
+      .filter-tool {
+        display: flex;
+        align-items: center;
+        
+        ul {
+
+          li {
+            background-color: $lilywhite;
+            padding: 10px 15px;
+            margin-right: 10px;
+            line-height: .5em;
+            border-radius: 20px;
+          }
+        }
+      }
+
+      ul {
+        display: flex;
+
+        li {
+          position: relative;
+          left: 10px;
+          padding: 5px 20px 5px 0px;
+          font-size: .8em;
+
+          &::before {
+            content: '';
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            position: relative;
+            left: -5px;
+            -moz-border-radius: 5px;
+            -webkit-border-radius: 5px;
+            border-radius: 5px;
+          }
+
+          &.software {
+
+            &::before {
+              background-color: $firewatch;
+            }
+          }
+
+          &.development {
+
+            &::before {
+              background-color: $casablanca;
+            }
+          }
+
+          &.etc {
+
+            &::before {
+              background-color: $cranberry;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  footer {
+    background-color: $blackpearl;
+    width: calc(100% - 60px);
+    padding: 5px 30px;
+    text-align: center;
+    color: #fff;
+
+    a {
+      color: #fff;
     }
   }
   
