--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -187,7 +187,7 @@
           list-style: none;
           display: flex;
           justify-content: space-between;
-          width: 500px;
+          width: 600px;
   
           a {
             text-transform: uppercase;
@@ -251,6 +251,10 @@
       & > * {
         z-index: 2;
       }
+
+      h1 {
+        margin: 20px;
+      }
     }
 
     section {
@@ -282,9 +286,17 @@
           align-items: center;
           width: 100%;
 
+          @media only screen and (max-width: 775px) {
+            flex-wrap: wrap;
+          }
+
           li {
             width: 30%;
             height: 350px;
+
+            @media only screen and (max-width: 775px) {
+              width: 100%;
+            }
 
             div {
               height: 100%;
@@ -345,14 +357,28 @@
         justify-self: center;
         margin: 30px -50px 0 -50px;
 
+        @media only screen and (max-width: 775px) {
+          height: 300px;
+          background-position: -100px 0px;
+        }
+
         ul {
           display: flex;
           justify-content: space-between;
           text-align: left;
           align-items: center;
 
+          @media only screen and (max-width: 775px) {
+            flex-wrap: wrap;
+          }
+
           li {
             width: 30%;
+
+            @media only screen and (max-width: 775px) {
+              width: 100%;
+              text-align: center;
+            }
 
             a {
               text-transform: uppercase;
