--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,10 @@
 
 .App {
 
+  margin-top: 320px;
+
+  /* START: Generics */
+
   h1 {
     font-family: p22-underground, sans-serif;
     font-weight: 100;
@@ -17,6 +21,11 @@
     text-transform: lowercase;
     font-size: 1.8em;
     margin: 0;
+  }
+
+  h3 {
+    text-transform: uppercase;
+    letter-spacing: 3px;
   }
   
   a {
@@ -61,7 +70,7 @@
   }
 
   .highlight {
-    background: linear-gradient(180deg, rgba(255,255,255,0) 50%, $botticelli 50%);
+    background: linear-gradient(180deg, rgba(255,255,255,0) 70%, #D1E3E8 70%);
     display: inline;
   }
 
@@ -71,6 +80,20 @@
     margin-top: -125px;
     visibility: hidden;
   }
+
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+  }
+
+  /* END: Generics */
+  /* START: Header */
 
   header {
     position: fixed;
@@ -88,7 +111,7 @@
     }
 
     .social-list-container {
-      background-color: $blackpearl;
+      background-color: #C16A4B;
       width: calc(100% - 60px);
       height: 30px;
       padding: 5px 30px;
@@ -128,15 +151,72 @@
 
     #main-nav {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
       align-items: center;
-      flex-wrap: wrap;
-      background-color: #fff;
-      box-shadow: 0px 4px 20px rgba(0,0,0,.1);
-      padding: 15px 30px;
 
-      .logo {
-        width: 100px;
+      #upper-nav {
+        background-color: #F9F8F6;
+        width: 100%;
+        padding: 30px;
+
+        .hide-logo {
+          display: none;
+        }
+
+        .show-logo {
+          display: block;
+        }
+
+        #main-logo {
+          width: 200px;
+          display: block;
+          margin: 0 auto;
+        }
+
+        #horizontal-logo {
+          width: 115px;
+          display: none;
+          margin: 0 auto;
+        }
+      }
+
+      nav {
+        background-color: #ffffff;
+        width: 100%;
+
+        @media only screen and (max-width: 775px) {
+          flex: 2;
+        }
+
+        ul {
+          list-style: none;
+          display: flex;
+          justify-content: space-between;
+          width: 500px;
+          margin: 30px auto;
+  
+          a {
+            text-transform: uppercase;
+          }
+  
+          @media only screen and (max-width: 775px) {
+            &.collapsed {
+              display: none;
+            }
+        
+            &.is-expanded {
+              display: block;
+              font-size: 2em;
+              padding-left: 0;
+              height: 75vh;
+
+              li {
+                padding-bottom: 20px;
+
+              }
+            }
+          }
+        }
       }
 
       a {
@@ -176,47 +256,19 @@
         }
 
       }
-
-      nav {
-
-        @media only screen and (max-width: 775px) {
-          flex: 2;
-        }
-
-        ul {
-          list-style: none;
-          display: flex;
-          justify-content: space-between;
-          width: 600px;
-  
-          a {
-            text-transform: uppercase;
-          }
-  
-          @media only screen and (max-width: 775px) {
-            &.collapsed {
-              display: none;
-            }
-        
-            &.is-expanded {
-              display: block;
-              font-size: 2em;
-              padding-left: 0;
-              height: 75vh;
-
-              li {
-                padding-bottom: 20px;
-
-              }
-            }
-          }
-        }
-      }
     }
   }
 
+  /* END: Header */
+  /* START: Main Body */
+
   main {
-    margin: 175px 50px 50px 50px;
+    margin: 0 auto;
+    max-width: 90%;
+
+    @media only screen and (max-width: 775px) {
+      max-width: 80%;
+    }
 
     .breadcrumbs {
       font-size: .8em;
@@ -225,6 +277,26 @@
         padding: 0 15px;
       }
     }
+
+    .grid-container {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+
+      @media only screen and (max-width: 775px) {
+        flex-direction: column;
+      }
+
+      .one-half {
+        flex-basis: 1;
+
+        &:first-child {
+          padding-right: 60px;
+        }
+      }
+    }
+
+    /* START: Jumbotron */
 
     .jumbotron {
       background-image: url('https://images.unsplash.com/photo-1542435503-956c469947f6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1334&q=80');
@@ -257,14 +329,35 @@
       }
     }
 
+    /* END: Jumbotron */
+
     section {
       padding: 20px 0;
+
+      #projects,
+      #community,
+      #about {
+        display: block;
+        position: relative;
+        top: -310px;
+        visibility: hidden;
+      }
     }
 
-    #speaking,
+    #about-section {
+      .headshot-img {
+        max-height: 400px;
+
+        @media only screen and (max-width: 775px) {
+          margin: 20px auto;
+          display: block;
+        }
+      }
+    }
+
     #buzzwords,
-    #projects,
-    #community {
+    #projects-section,
+    #community-section {
 
       ul {
         list-style: none;
@@ -276,7 +369,14 @@
       }
     }
 
-    #projects {
+    #community-section {
+      span {
+        display: block;
+      }
+    }
+
+    /* START: Projects */
+    #projects-section {
 
       #case-studies {
 
@@ -344,49 +444,10 @@
           }
         }
       }
-
-      #additional-work {
-        background-image: url('../images/bg-splotch.jpg');
-        background-size: cover;
-        height: 200px;
-        text-align: center;
-        padding: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-self: center;
-        margin: 30px -50px 0 -50px;
-
-        @media only screen and (max-width: 775px) {
-          height: 300px;
-          background-position: -100px 0px;
-        }
-
-        ul {
-          display: flex;
-          justify-content: space-between;
-          text-align: left;
-          align-items: center;
-
-          @media only screen and (max-width: 775px) {
-            flex-wrap: wrap;
-          }
-
-          li {
-            width: 30%;
-
-            @media only screen and (max-width: 775px) {
-              width: 100%;
-              text-align: center;
-            }
-
-            a {
-              text-transform: uppercase;
-            }
-          }
-        }
-      }
     }
+
+    /* END: Projects */
+    /* START: Buzzwords */
 
     #buzzwords {
       & > ul {
@@ -433,21 +494,21 @@
           &.software {
 
             &::before {
-              background-color: $firewatch;
+              background-color: #C16A4B;
             }
           }
 
           &.development {
 
             &::before {
-              background-color: $casablanca;
+              background-color: #DDA126;
             }
           }
 
           &.etc {
 
             &::before {
-              background-color: $cranberry;
+              background-color: #B4D1D8;
             }
           }
         }
@@ -455,8 +516,32 @@
     }
   }
 
+  /* END: Buzzwords */
+  /* START: Case Studies */
+
+  .case-study-image {
+    padding: 25px 0;
+
+    img {
+      width: 80%;
+      display: block;
+      padding-top: 10px;
+    }
+
+    caption {
+      display: block;
+      font-style: italic;
+      padding: 10px 0;
+      text-align: left;
+      font-size: .8em;
+    }
+  }
+
+  /* END: Case Studies */
+  /* START: Footer */
+
   footer {
-    background-color: $blackpearl;
+    background-color: #C16A4B;
     width: calc(100% - 60px);
     padding: 5px 30px;
     text-align: center;
@@ -472,15 +557,6 @@
       }
     }
   }
-  
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0,0,0,0);
-    border: 0;
-  }
+
+  /* END: Footer */
 }
