--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -180,6 +180,13 @@
         }
       }
 
+      .mobile-nav-icons {
+        background-color: #fff;
+        text-align: center;
+        width: 100%;
+        padding: 10px 0;
+      }
+
       nav {
         background-color: #ffffff;
         width: 100%;
@@ -207,7 +214,6 @@
             &.is-expanded {
               display: block;
               font-size: 2em;
-              padding-left: 0;
               height: 75vh;
 
               li {
@@ -228,6 +234,7 @@
 
       #mobile-nav-open, #mobile-nav-close {
           width: 15%;
+          padding-top: 30px;
       }
 
       #mobile-nav-open, #mobile-nav-close {
