--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -1,10 +1,7 @@
-/* Primary Colors */
-$firewatch: #F2836B;
 $lilywhite: #F0F4F4;
-$blackpearl: #192526;
-
-/* Secondary Colors */
-$cranberry: #D95F80;
-$casablanca: #F2B544;
-$sandybrown: #F2A649;
-$botticelli: #D1E3E8;
+$blackpearl: #233333;
+$icyblue: #D1E3E8;
+$spicedginger: #C16A4B;
+$offwhite: #F9F8F6;
+$ochre: #DDA126;
+$arcticblue: #B4D1D8;
